workloads/mlops-deploy-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mlflow
  name: deployment-mlflow-boston-housing
  labels:
    app.kubernetes.io/name: app-mlflow-boston-housing
  annotations:
    # Container Image Automated Update
    flux.weave.works/automated: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-mlflow-boston-housing
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-mlflow-boston-housing
    spec:
      containers:
      - image: 928808346782.dkr.ecr.us-west-2.amazonaws.com/yugaozh-mlops-stage-mlflow-boston-housing:a7ff576d
        imagePullPolicy: Always
        name: app-mlflow-boston-housing
        ports:
        - containerPort: 8080
