workloads/mlops-deploy-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mlflow
  name: ingress-mlflow
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
          - path: /invocations
            pathType: Prefix
            backend:
              service:
                name: service-mlflow-boston-housing
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-mlflow-tracking-server
                port:
                  number: 80
